--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,6 @@
   #style.css
 \*-----------------------------------*/
 
-/**
- * copyright 2023 codewithsadee
- */
-
-
-
-
 
 /*-----------------------------------*\
   #CUSTOM PROPERTY
@@ -16,88 +9,88 @@
 
 :root {
 
-    /**
+  /**
      * COLORS
      */
 
-    /* backgroud colors */
-    --bg-white: hsl(0, 0%, 100%);
-    --bg-black-alpha-20: hsla(0, 0%, 0%, 0.2);
-    --bg-lavender-blush: hsl(0, 100%, 98%);
-    --bg-majorelle-blue: hsl(249, 95%, 63%);
-    --bg-ocean-blue: hsl(249, 63%, 54%);
-    --bg-majorelle-blue-alpha-5: hsla(249, 95%, 63%, 0.05);
-    --bg-misty-rose: hsl(0, 100%, 95%);
-    --bg-red-salsa: hsl(357, 94%, 63%);
-    --bg-red-salsa-alpha-5: hsla(357, 94%, 63%, 0.05);
-    --bg-english-vermillion: hsl(357, 64%, 53%);
-    --bg-chrome-yellow-alpha-5: hsla(40, 100%, 50%, 0.05);
-    --bg-sunglow-alpha-10: hsla(48, 100%, 50%, 0.1);
-    --bg-gainsboro: hsl(0, 0%, 85%);
+  /* backgroud colors */
+  --bg-white: hsl(0, 0%, 100%);
+  --bg-black-alpha-20: hsla(0, 0%, 0%, 0.2);
+  --bg-lavender-blush: hsl(0, 100%, 98%);
+  --bg-majorelle-blue: hsl(249, 95%, 63%);
+  --bg-ocean-blue: hsl(249, 63%, 54%);
+  --bg-majorelle-blue-alpha-5: hsla(249, 95%, 63%, 0.05);
+  --bg-misty-rose: hsl(0, 100%, 95%);
+  --bg-red-salsa: hsl(357, 94%, 63%);
+  --bg-red-salsa-alpha-5: hsla(357, 94%, 63%, 0.05);
+  --bg-english-vermillion: hsl(357, 64%, 53%);
+  --bg-chrome-yellow-alpha-5: hsla(40, 100%, 50%, 0.05);
+  --bg-sunglow-alpha-10: hsla(48, 100%, 50%, 0.1);
+  --bg-gainsboro: hsl(0, 0%, 85%);
 
-    /* text color */
-    --text-white: hsl(0, 0%, 100%);
-    --text-gunmetal: hsl(209, 40%, 14%);
-    --text-light-coral: hsl(357, 96%, 73%);
-    --text-granite-gray: hsl(210, 4%, 38%);
-    --text-majorelle-blue: hsl(249, 95%, 63%);
-    --text-sunglow: hsl(48, 100%, 50%);
+  /* text color */
+  --text-white: hsl(0, 0%, 100%);
+  --text-gunmetal: hsl(209, 40%, 14%);
+  --text-light-coral: hsl(357, 96%, 73%);
+  --text-granite-gray: hsl(210, 4%, 38%);
+  --text-majorelle-blue: hsl(249, 95%, 63%);
+  --text-sunglow: hsl(48, 100%, 50%);
 
-    /* border color */
-    --border-gainsboro: hsl(0, 1%, 85%);
+  /* border color */
+  --border-gainsboro: hsl(0, 1%, 85%);
 
-    /**
+  /**
      * TYPOGRAPHY
      */
 
-    /* font family */
-    --ff-poppins: 'Poppins', sans-serif;
+  /* font family */
+  --ff-poppins: 'Poppins', sans-serif;
 
-    /* font size */
-    --fontSize-1: 4.2rem;
-    --fontSize-2: 3.6rem;
-    --fontSize-3: 2.5rem;
-    --fontSize-4: 2.4rem;
-    --fontSize-5: 2rem;
-    --fontSize-6: 1.6rem;
-    --fontSize-7: 1.5rem;
+  /* font size */
+  --fontSize-1: 4.2rem;
+  --fontSize-2: 3.6rem;
+  --fontSize-3: 2.5rem;
+  --fontSize-4: 2.4rem;
+  --fontSize-5: 2rem;
+  --fontSize-6: 1.6rem;
+  --fontSize-7: 1.5rem;
 
-    /* font weight */
-    --weight-bold: 700;
-    --weight-semiBold: 600;
-    --weight-medium: 500;
+  /* font weight */
+  --weight-bold: 700;
+  --weight-semiBold: 600;
+  --weight-medium: 500;
 
-    /**
+  /**
      * SPACING
      */
 
-    --section-spacing: 80px;
+  --section-spacing: 80px;
 
-    /**
+  /**
      * BOX SHADOW
      */
 
-    --shadow-1: 0 2px 10px hsla(209, 40%, 14%, 10%);
-    --shadow-2: 0 5px 10px hsla(249, 95%, 63%, 25%);
-    --shadow-3: 0 5px 10px hsla(357, 64%, 53%, 25%);
-    --shadow-4: 0 30px 50px hsla(357, 64%, 53%, 30%);
+  --shadow-1: 0 2px 10px hsla(209, 40%, 14%, 10%);
+  --shadow-2: 0 5px 10px hsla(249, 95%, 63%, 25%);
+  --shadow-3: 0 5px 10px hsla(357, 64%, 53%, 25%);
+  --shadow-4: 0 30px 50px hsla(357, 64%, 53%, 30%);
 
-    /**
+  /**
      * RADIUS
      */
 
-    --radius-pill: 200px;
-    --radius-circle: 50%;
-    --radius-30: 30px;
-    --radius-20: 20px;
+  --radius-pill: 200px;
+  --radius-circle: 50%;
+  --radius-30: 30px;
+  --radius-20: 20px;
 
-    /**
+  /**
      * TRANSITION
      */
 
-    --transition-1: 250ms ease;
-    --transition-2: 500ms ease;
-    --cubic-out: cubic-bezier(0.05, 0.83, 0.52, 0.97);
+  --transition-1: 250ms ease;
+  --transition-2: 500ms ease;
+  --cubic-out: cubic-bezier(0.05, 0.83, 0.52, 0.97);
 
 }
 
@@ -108,15 +101,89 @@
 /*-----------------------------------*\
     #RESET
   \*-----------------------------------*/
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+li {
+  list-style: none;
+}
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
+a,
+img,
+span,
+input,
+strong,
+button,
+textarea,
+ion-icon {
+  display: block;
+}
+
+img {
+  height: auto;
+}
+
+ion-icon {
+  pointer-events: none;
+  color: var(--white);
+}
+
+button,
+input,
+textarea {
+  background: none;
+  border: none;
+  font: inherit;
+}
+
+button {
+  cursor: pointer;
+}
+
+input,
+textarea {
+  width: 100%;
+}
+
+address {
+  font-style: normal;
+}
+
+html {
+  font-size: 10px;
+  font-family: var(--ff-open-sans);
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: var(--bg-lavender-blush);
+  color: var(--text-granite-gray);
+  font-size: var(--fontSize-6);
+  line-height: 1.8;
+  height: 300vh;
+}
+
+body.nav-active {
+  overflow: hidden;
+}
 
 
 /*-----------------------------------*\
     #REUSED STYLE
   \*-----------------------------------*/
-
+.container {
+  padding-inline: 16px;
+}
 
 
 
@@ -125,63 +192,63 @@
     #PRELOADER
 /* ----------------------------------- */
 .preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--bg-lavender-blush);
-    display: grid;
-    place-content: center;
-    z-index: 6;
-    transition: var(--transition-1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-lavender-blush);
+  display: grid;
+  place-content: center;
+  z-index: 6;
+  transition: var(--transition-1);
 }
 
 .preloader.remove {
-    visibility: hidden;
-    opacity: 0;
+  visibility: hidden;
+  opacity: 0;
 }
 
 .preloader .img {
-    animation: bounce 800ms ease-in-out infinite alternate;
+  animation: bounce 800ms ease-in-out infinite alternate;
 }
 
 @keyframes bounce {
-    0% {
-        transform: translateY(-10px);
-    }
+  0% {
+    transform: translateY(-10px);
+  }
 
-    100% {
-        transform: translateY(0);
-    }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .preloader-inner {
-    position: relative;
+  position: relative;
 }
 
 .preloader-inner::after {
-    content: "";
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80%;
-    height: 10px;
-    background-color: var(--bg-black-alpha-20);
-    filter: blur(4px);
-    z-index: -1;
-    animation: dropShadow 800ms ease-in-out infinite alternate;
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  height: 10px;
+  background-color: var(--bg-black-alpha-20);
+  filter: blur(4px);
+  z-index: -1;
+  animation: dropShadow 800ms ease-in-out infinite alternate;
 }
 
 @keyframes dropShadow {
-    0% {
-        width: 40%;
-    }
+  0% {
+    width: 40%;
+  }
 
-    100% {
-        width: 80%;
-    }
+  100% {
+    width: 80%;
+  }
 }
 
 
@@ -189,13 +256,109 @@
     #HEADER
   \*-----------------------------------*/
 
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header {
+  padding-block: 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 4;
+}
+
+.header.active {
+  position: fixed;
+  background-color: var(--bg-white);
+  box-shadow: var(--shadow-1);
+
+  animation: slideIn 500ms ease forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.logo img {
+  width: 160px;
+}
+
+.nav-toggle-btn {
+  font-size: 3.2rem;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  right: -400px;
+  max-width: 400px;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--bg-white);
+  padding: 30px 16px;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  transition: 400ms var(--cubic-out);
+  visibility: hidden;
+}
+
+.navbar.active {
+  transform: translateX(-400px);
+  transition-duration: 500ms;
+  visibility: visible;
+}
 
 
+.navbar-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.navbar-list {
+  margin-block-start: 50px;
+}
+
+.navbar-link {
+  position: relative;
+  color: var(--text-gunmetal);
+  font-size: var(--fontSize-7);
+  font-weight: var(--weight-medium);
+  padding-block: 8px;
+  transition: var(--transition-1);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--bg-white);
+  opacity: 0;
+  visibility: hidden;
+  transform: var(--transition-1);
+}
+
+.overlay.active {
+  visibility: visible;
+  opacity: 0.5;
+}
 
 /*-----------------------------------*\
     #HERO
-  \*-----------------------------------*/
+\*-----------------------------------*/
 
 
 
