--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* font-family: var(--ff-poppins); */
 }
 
 li {
@@ -161,7 +162,7 @@ address {
 
 html {
   font-size: 10px;
-  font-family: var(--ff-open-sans);
+  font-family: var(--ff-poppins);
   scroll-behavior: smooth;
 }
 
@@ -186,7 +187,29 @@ body.nav-active {
 }
 
 
+.section {
+  padding-block-end: var(--section-spacing);
+}
 
+.w-100 {
+  width: 100%;
+}
+
+.section-subtitle {
+  color: var(--text-majorelle-blue);
+  font-weight: var(--weight-medium);
+  text-transform: uppercase;
+}
+
+.section-title {
+  margin-block: 10px;
+}
+
+.img-holder {
+  aspect-ratio: var(--width) / var(--height);
+  background-color: var(--bg-gainsboro);
+  overflow: hidden;
+}
 
 /*-----------------------------------*\
     #PRELOADER
@@ -356,29 +379,255 @@ body.nav-active {
   opacity: 0.5;
 }
 
+@media(min-width: 992px) {
+  .container {
+    max-width: 950px;
+    margin-inline: auto;
+  }
+
+  /* 
+  * HEADER
+  */
+  .nav-toggle-btn,
+  .navbar-top,
+  .overlay {
+    display: none;
+  }
+
+  .navbar,
+  .navbar.active {
+    all: unset;
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+  }
+
+  .navbar-list {
+    margin-block-start: 0;
+    display: flex;
+    gap: 30px;
+    margin-inline: auto;
+  }
+
+  .header-action {
+    display: flex;
+    gap: 30px;
+  }
+
+  .header.active {
+    padding-block: 15px;
+  }
+}
+
+@media(min-width: 1400px) {
+  /* CUSTOM PROPERTY */
+
+}
+
 /*-----------------------------------*\
     #HERO
 \*-----------------------------------*/
+.hero {
+  padding-block-start: 150px;
+}
 
+.has-bg-image {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
+.title {
+  color: var(--text-gunmetal);
+  font-weight: var(--weight-semiBold);
+  line-height: 1.45;
+}
 
+.h1 {
+  font-size: var(--fontSize-1);
+  line-height: 1.2;
+}
 
+.h2 {
+  font-size: var(--fontSize-2);
+}
+
+.h3 {
+  font-size: var(--fontSize-4);
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: var(--transition-2);
+}
+
+.hero .container {
+  display: grid;
+  gap: 50px;
+}
+
+.hero-subtitles {
+  background-color: var(--bg-misty-rose);
+  color: var(--text-light-coral);
+  font-size: var(--fontSize-7);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  max-width: max-content;
+  padding: 8px 20px;
+  border-radius: var(--radius-pill);
+}
+
+.hero-title {
+  margin-block: 20px;
+}
+
+.hero-text {
+  margin-block-end: 30px;
+}
+
+.hero .btn-secondary {
+  margin-block-end: 20px;
+}
+
+.hero-btn {
+  color: var(--text-gunmetal);
+  font-weight: var(--weight-medium);
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  transition: var(--transition-1);
+}
+
+.hero-btn .btn-img {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background-color: var(--bg-gainsboro);
+  border-radius: var(--radius-circle);
+  box-shadow: var(--shadow-1);
+}
+
+.hero-btn .img-cover {
+  border-radius: inherit;
+}
+
+.hero-btn i {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(50%, -50%);
+  background-color: var(--bg-white);
+  padding: 4px 8px;
+  border-radius: var(--radius-circle);
+  box-shadow: var(--shadow-1);
+}
+
+.hero-btn:is(:hover, :focus-visible) {
+  color: var(--text-majorelle-blue);
+}
 
 /*-----------------------------------*\
     #SERVICE
   \*-----------------------------------*/
+.section .container {
+  display: grid;
+  gap: 25px;
+}
 
+.service-card:nth-child(2) {
+  background-color: var(--bg-chrome-yellow-alpha-5);
+}
 
+.service-card:nth-child(3) {
+  background-color: var(--bg-red-salsa-alpha-5);
+}
 
+.service-card:nth-child(4) {
+  background-color: var(--bg-majorelle-blue-alpha-5);
+}
+
+.service-card {
+  padding: 25px 20px;
+  border-radius: var(--radius-20);
+}
+
+.service-card .card-title {
+  margin-block: 10px 5px;
+}
 
 
 /*-----------------------------------*\
     #DESTINATION
   \*-----------------------------------*/
 
+.desti .section-title {
+  margin-block-end: 40px;
+}
 
+.desti-list {
+  display: grid;
+  gap: 30px;
+}
 
+.desti-card .card-banner {
+  position: relative;
+  border-radius: var(--radius-30);
+}
 
+.desti-card:is(:hover, :focus-within) .img-cover {
+  transform: scale(1.05);
+}
+
+.desti-card .card-price {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: var(--bg-white);
+  color: var(--text-majorelle-blue);
+  font-weight: var(--weight-bold);
+  font-size: 1.8rem;
+  line-height: 1.45;
+  padding: 5px 15px;
+  border-radius: var(--radius-pill);
+}
+
+.desti-card .card-title {
+  margin-block: 15px 5px;
+  transition: var(--transition-1);
+}
+
+.desti-card .card-title:is(:hover, :focus-visible) {
+  color: var(--text-majorelle-blue);
+}
+
+.desti-card :is(.card-rating, .span) {
+  display: flex;
+  align-items: center;
+}
+
+.desti-card .card-rating {
+  margin-block-start: 10px;
+  gap: 10px;
+}
+
+.desti-card .card-rating .span {
+  background-color: var(--bg-sunglow-alpha-10);
+  gap: 5px;
+  padding: 4px 12px;
+  border-radius: var(--radius-pill);
+}
+
+.desti-card .card-rating i {
+  color: var(--text-sunglow);
+}
+
+.desti .btn {
+  margin-inline: auto;
+  margin-block-start: 40px;
+}
 
 /*-----------------------------------*\
     #EXPERIENCE
